--- a/src/SubPage03/Mypage03.css
+++ b/src/SubPage03/Mypage03.css
@@ -4,13 +4,12 @@ select{
     cursor: pointer;
 }
 .Mypage03{
-    width: 100%;
-}
-.m3_in{
-    max-width: 1200px;
+    position: relative;
+    box-sizing: border-box;
     margin-left: auto;
     margin-right: auto;
-    padding-bottom: 20px;
+    white-space: nowrap;
+    background-color: #000;
 }
 .Mypage03 .RecHeader{
     padding-bottom: 0px;
@@ -95,7 +94,7 @@ select{
 }
 
 @media screen and (min-width:768px){
-    .Mypage03{
+    .Mypage03 .m3_in{
         padding-left: 240px;
     }
     .Mypage03 .rename{
@@ -120,21 +119,9 @@ select{
     }
 }
 @media screen and (min-width:1024px){
-    .Mypage03 .lode select{
-        padding: 3px 7px 5px 7px;
-        color: #fff;
-        font-size: 17px;
-        background-color: #000;
-    }
-    .Mypage03 .m3i_01{
-        font-size: 20px;
-        margin-bottom: 25px;
-    }
-    .Mypage03 .m3i_02{
-        font-size: 18px;
-    }
-    .Mypage03 .m3i_03{
-        line-height: 1.2em;
-        font-size: 18px;
+    .Mypage03 .m3_in{
+        width: 1200px;
+        margin-left: auto;
+        margin-right: auto;
     }
 }
