--- a/src/SubPageEtc/Menu.css
+++ b/src/SubPageEtc/Menu.css
@@ -112,14 +112,28 @@
 
 /* 하단 검색 클릭 */
 .Menu02 {
-    width: 100%;
-}
-.m2_in{
     max-width: 1200px;
     margin-left: auto;
     margin-right: auto;
-    padding: 0 20px 20px 20px;
-    text-align: center;
+}
+.m2_in{
+    box-sizing: border-box;
+    padding-top: 20px;
+    padding-left: 20px;
+    padding-right: 20px;
+    white-space: nowrap;
+    margin-bottom: 30px;
+}
+.m2_in input{
+    box-sizing: border-box;
+    width: 100%;
+    height: auto;
+    border-radius: 4px;
+    border: none;
+    padding-top: 10px;
+    padding-bottom: 12px;
+    padding-left: 20px;
+    font-size: 16px;
 }
 .m2_in .sc_bn{
     margin-top: 15px;
