--- a/src/utill/Left.css
+++ b/src/utill/Left.css
@@ -8,12 +8,13 @@
     top: 0%;
     height: 100%;
     background-color: #141517;
+    z-index: 9999;
     
 }
 .logo1 img{
     cursor: pointer;
     margin-left: 30px;
-    margin-top: 50px;
+    margin-top: 30px;
     margin-bottom: 30px;
 }
 .home1, .movies1, .party1, .search1, .review1, .box1{
@@ -41,7 +42,7 @@
     border-bottom: 1px solid rgba(255, 255, 255, 0.05);
     padding-bottom: 30px;
 }
-.home1.active1, .movies1.active1, .party1.active1, .box1.active1, .search1.active1, .review1.active1{
+.home1.active1, .movies1.active1, .party1.active1, .box1.active1, .search1.active1{
     background-color: rgb(58, 58, 58);
 }
 
